k8s/01-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appsql-deployment
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: appsql
  template:
    metadata:
      labels:
        app: appsql
    spec:
      containers:
        - name: appsql
          image: thawatchai95/appsql:sha-23b530f25a9290148f992057beff9568b3ed85b4
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
