k8s/05-sql-statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: default
spec:
  serviceName: mysql
  replicas: 3
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        args:
        - --default-time-zone=+07:00
        volumeMounts:
          - name: mysql-storage
            mountPath: /var/lib/mysql
            subPath: mysql-data
          - name: mysql-initdb-volume
            mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mysql-initdb-volume
          configMap:
            name: mysql-initdb
  volumeClaimTemplates:
    - metadata:
        name: mysql-storage
      spec:
        accessModes: [ReadWriteOnce]
        resources:
          requests:
            storage: 5Gi
        storageClassName: longhorn-mysql  # ใช้ Longhorn เป็น Storage
