k8s/02-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appsql-service
  namespace: default
spec:
  selector:
    app: appsql
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
