k8s/03-app-ingress.yaml
# ingress-controller-service.yaml
# อันนี้มักจะติดตั้งมาพร้อมกับ Ingress Controller
# แต่ขอยกมาให้เห็นว่า Service ของ Ingress Controller เป็นแบบ NodePort
apiVersion: v1
kind: Service
metadata:
  name: ingress-AppSQL-controller
  namespace: ingress-nginx
spec:
  type: NodePort  # ใช้ NodePort เพื่อให้ HAProxy ส่งต่อมาได้
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 33080  # ค่า NodePort สำหรับ HTTP
    - name: https
      port: 443
      targetPort: 443
      nodePort: 33443  # ค่า NodePort สำหรับ HTTPS
  selector:
    app.kubernetes.io/name: ingress-nginx
