k8s/06-sql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sql-service
  namespace: default
spec:
  clusterIP: None  # ใช้ clusterIP แบบนี้ เพื่อให้ Pod มี hostname คงที่
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
